Fix speech arrow alignment

--- a/sass/modules/_publish.sass
+++ b/sass/modules/_publish.sass
@@ -15,7 +15,7 @@
 				content: ""
 				display: inline-block
 				position: absolute
-				left: -10px
+				left: -9px
 				top: calc(50% - 8px)
 				width: 10px
 				height: 16px
